update tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,13 @@ set -sg exit-empty on
 set -q -g status-utf8 on
 setw -q -g utf8 on
 
+# window indexing
+set -g base-index 1
+setw -g pane-base-index 1
+
+# window movement
+bind b previous-window
+
 # visual
 set -g visual-activity off
 setw -g monitor-activity off
@@ -35,8 +42,7 @@ setw -g window-status-bell-style 'fg=colour62 bg=colour1 bold'
 set -g message-style 'fg=colour57  bg=colour242 bold'
 
 # fast reload
-bind r source-file ~/tmux.config
-
+bind r source-file ~/.tmux.conf
 
 # prefix
 unbind C-b
@@ -48,6 +54,14 @@ unbind %
 bind | split-window -h
 bind - split-window -v
 
-# allow window rename
+# pane movement shortcuts (same as vim)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# window ops
 set-option -g allow-rename off
+unbind g
+bind k confirm -p "Kill window #W (y/n)?" kill-window
 
