--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -26,3 +26,10 @@ brew "tree"
 brew "vim"
 brew "yapf"
 brew "jesseduffield/lazygit/lazygit"
+brew "wget"
+brew "node"
+brew "zsh-autosuggestions"
+
+cask "scroll-reverser"
+cask "arc"
+cask "discord"
