--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ set -g mouse on
 set -sg exit-empty on
 set -q -g status-utf8 on
 setw -q -g utf8 on
+set-option -g renumber-windows on
 
 # window indexing
 set -g base-index 1
