--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,26 +21,8 @@ set -g visual-activity off
 setw -g monitor-activity off
 setw -g monitor-bell off
 
-set -g pane-border-style 'fg=colour7 bg=colour0'
-set -g pane-active-border-style 'bg=colour0 fg=colour61'
-
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour242 bold'
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour243 fg=colour137 dim'
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour60] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
-set -g status-right-length 5
-set -g status-left-length 20
-
-setw -g window-status-current-style 'fg=colour1 bg=colour61 bold'
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-setw -g window-status-style 'fg=colour9 bg=colour60'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-setw -g window-status-bell-style 'fg=colour62 bg=colour1 bold'
-
-set -g message-style 'fg=colour57  bg=colour242 bold'
+# color nord theme
+run-shell "~/.tmux/nord/nord.tmux"
 
 # fast reload
 bind r source-file ~/.tmux.conf
@@ -64,5 +46,5 @@ bind l select-pane -R
 # window ops
 set-option -g allow-rename off
 unbind g
-bind k confirm -p "Kill window #W (y/n)?" kill-window
+bind q confirm -p "Kill window #W (y/n)?" kill-window
 
